[gd_scene load_steps=7 format=3 uid="uid://l1a381jt4yc8"]

[ext_resource type="Script" uid="uid://ddvu56av5q6em" path="res://scripts/ui/Hud/hud.gd" id="1_7ow3k"]
[ext_resource type="FontFile" uid="uid://d30hgfkq7jl3v" path="res://assets/ui/fonts/Jersey_25/Jersey25-Regular.ttf" id="1_8rpsh"]
[ext_resource type="Texture2D" uid="uid://bl1qcpmv6n4ks" path="res://assets/sprites/idle.png" id="3_uputy"]

[sub_resource type="Animation" id="Animation_uputy"]
resource_name = "show_hud"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.43333334, 0.5833333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -95), Vector2(0, 40), Vector2(0, 19)]
}

[sub_resource type="Animation" id="Animation_vvc7a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 19)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vvc7a"]
_data = {
&"RESET": SubResource("Animation_vvc7a"),
&"show_hud": SubResource("Animation_uputy")
}

[node name="Hud" type="Control"]
process_mode = 3
z_index = 20
custom_minimum_size = Vector2(412, 40)
layout_mode = 3
anchor_top = 0.021000002
anchor_right = 1.0
anchor_bottom = 0.08400001
offset_top = -0.25700188
offset_bottom = -0.028076172
grow_horizontal = 2
size_flags_vertical = 0
script = ExtResource("1_7ow3k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -11.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 6
text = "PAUSE"

[node name="ScoreLife" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 0
alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/ScoreLife"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8rpsh")
theme_override_font_sizes/font_size = 24
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreValue" type="Label" parent="MarginContainer/VBoxContainer/ScoreLife"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8rpsh")
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LifeHud" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScoreLife"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/ScoreLife/LifeHud"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_uputy")

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/ScoreLife/LifeHud"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_uputy")

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/ScoreLife/LifeHud"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_uputy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vvc7a")
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
